# git-clean-branches

./: .ghci  .travis.yml  CHANGELOG.md  LICENSE  README.md  git-clean-branches.cabal
.github/workflows/: release.yml
app/: Main.hs
src/: GitCleanBranches.hs
src/GitCleanBranches/: Cli.hs  Core.hs  Git.hs
src/GitCleanBranches/Git/: Branch.hs
